[gd_scene load_steps=4 format=3 uid="uid://bwbar086b16s3"]

[ext_resource type="Script" path="res://scripts/BuildingsManager.gd" id="1_xvyfi"]
[ext_resource type="Script" path="res://classes/Building.gd" id="2_cp4ie"]
[ext_resource type="PackedScene" uid="uid://drnybysl67mw5" path="res://classes/ScreenBuilding.tscn" id="2_exgfd"]

[node name="BuildingsManager" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 2
script = ExtResource("1_xvyfi")

[node name="WindPower" type="Node" parent="."]

[node name="WindPowerPlant" parent="WindPower" node_paths=PackedStringArray("buildingTimer") instance=ExtResource("2_exgfd")]
offset_left = 448.0
offset_top = 400.0
offset_right = -680.0
offset_bottom = -176.0
color = Color(0.796078, 0.796078, 0.796078, 1)
buildingTimer = NodePath("../WindPowerTimer")

[node name="WindPowerTimer" type="Timer" parent="WindPower"]
script = ExtResource("2_cp4ie")

[node name="WaterPower" type="Node" parent="."]

[node name="WaterPowerPlant" parent="WaterPower" node_paths=PackedStringArray("buildingTimer") instance=ExtResource("2_exgfd")]
offset_left = 786.0
offset_top = 244.0
offset_right = -304.0
offset_bottom = -363.0
color = Color(0, 0.666667, 0.666667, 1)
buildingTimer = NodePath("../WaterPowerTimer")

[node name="WaterPowerTimer" type="Timer" parent="WaterPower"]
script = ExtResource("2_cp4ie")

[node name="NuclearPower" type="Node" parent="."]

[node name="NuclearPowerPlant" parent="NuclearPower" node_paths=PackedStringArray("buildingTimer") instance=ExtResource("2_exgfd")]
offset_left = 220.0
offset_top = 140.0
offset_right = -875.0
offset_bottom = -449.0
color = Color(0, 0.741176, 0.34902, 1)
buildingTimer = NodePath("../NuclearPowerTimer")

[node name="NuclearPowerTimer" type="Timer" parent="NuclearPower"]
script = ExtResource("2_cp4ie")

[connection signal="timeout" from="WindPower/WindPowerTimer" to="." method="_on_wind_power_timer_timeout"]
[connection signal="timeout" from="WaterPower/WaterPowerTimer" to="." method="_on_water_power_timer_timeout"]
[connection signal="timeout" from="NuclearPower/NuclearPowerTimer" to="." method="_on_nuclear_power_timer_timeout"]
